--- a/untitled6/startbootstrap-grayscale-gh-pages 4/css/grayscale.css
+++ b/untitled6/startbootstrap-grayscale-gh-pages 4/css/grayscale.css
@@ -89,7 +89,7 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("untitled6/assets/images/matahari.jpg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("https://nafeesahyounis.github.io/foreigntherapistsgroup/untitled6/assets/images/image.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
